--- a/bootique-jetty-instrumented/pom.xml
+++ b/bootique-jetty-instrumented/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>jersey-client</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<!-- Jersey client on Java 9+ needs these -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
