--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -80,8 +80,21 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
+			<exclusions>
+				<!-- Guice includes this one -->
+				<exclusion>
+					<artifactId>javax.inject</artifactId>
+					<groupId>org.glassfish.hk2.external</groupId>
+				</exclusion>
+			</exclusions>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- Jersey client on Java 9+ needs these -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
