--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.bootique.modules.parent</groupId>
 		<artifactId>bootique-modules-parent</artifactId>
-		<version>0.12</version>
+		<version>0.13</version>
 	</parent>
 
 	<groupId>io.bootique.jetty</groupId>
@@ -45,6 +45,7 @@
 
 	<properties>
 		<bootique.version>${project.version}</bootique.version>
+		<hk2.version>2.5.0-b61</hk2.version>
 	</properties>
 
 	<scm>
@@ -83,12 +84,46 @@
 				<artifactId>bootique-metrics-healthchecks</artifactId>
 				<version>${bootique.version}</version>
 			</dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.inject</groupId>
+                <artifactId>jersey-hk2</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
             <dependency><!-- Transitive dependency of jersey-client -->
                 <groupId>javax.activation</groupId>
                 <artifactId>activation</artifactId>
                 <version>1.1.1</version>
             </dependency>
+			<dependency>
+				<groupId>org.glassfish.hk2</groupId>
+				<artifactId>hk2-api</artifactId>
+				<version>${hk2.version}</version>
+				<exclusions>
+					<!-- Guice includes this one -->
+					<exclusion>
+						<groupId>org.glassfish.hk2.external</groupId>
+						<artifactId>aopalliance-repackaged</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.hk2</groupId>
+				<artifactId>hk2-locator</artifactId>
+				<version>${hk2.version}</version>
+				<exclusions>
+					<!-- Guice includes this one -->
+					<exclusion>
+						<groupId>org.glassfish.hk2.external</groupId>
+						<artifactId>aopalliance-repackaged</artifactId>
+					</exclusion>
+					<exclusion>
+						<artifactId>javax.inject</artifactId>
+						<groupId>org.glassfish.hk2.external</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
 		</dependencies>
+
 	</dependencyManagement>
 
 	<!-- Optional profile used to sign artifacts -->
