--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,11 @@
     </modules>
 
     <properties>
-        <!-- TODO: move activation and websocket versions to bootique-modules-parent -->
+        <!-- TODO: move websocket versions to bootique-modules-parent -->
         <websocket.version>1.1</websocket.version>
         <jakarta.websocket.version>2.0.0</jakarta.websocket.version>
 
+        <!-- TODO: will be defined in "bootique-modules-parent" v.3.0.27 and can be removed from here -->
         <activation2.version>2.1.3</activation2.version>
     </properties>
 
