--- a/bootique-jetty/pom.xml
+++ b/bootique-jetty/pom.xml
@@ -36,6 +36,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>javax.activation</groupId>
+				<artifactId>activation</artifactId>
+				<version>1.1.1</version>
+			</dependency>
+			<dependency>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-server</artifactId>
 				<version>${jetty10.version}</version>
